mise a jour avec theme sombre de la page info-consommation
